# comohay-alerts

./: Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: Action.yml  action.yml  ci.yml
comohay_alerts/: __main__.py  exceptions.py  main.py  models.py  scraper.py  settings.py
