[tool.poetry]
name = "comohay-alerts"
version = "0.0.1"
description = "Alerts notification system of ComoHay implemented with Typer, PyroGram and Supabase."
authors = ["Leynier Gutiérrez González <leynier41@gmail.com>"]
homepage = "https://github.com/leynier/comohay-alerts"
repository = "https://github.com/leynier/comohay-alerts"
readme = "README.md"

[tool.poetry.scripts]
comohay-alerts = "comohay_alerts.main:app"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
